BUild vol removed

--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -15,15 +15,13 @@ test:
 builder:
   build: ../../
   dockerfile: docker/dev/Dockerfile
-  volumes:
-    - ../../target:/wheelhouse
   volumes_from:
     - cache
   entrypoint: "entrypoint.sh"
   command: ["pip", "wheel", "--no-index", "-f /build", "."]
 
 agent:
-  image: jmenga/ansible
+  image: uppdeep/ansible
   links:
     - db
   environment:
